# nxlog-ce

./: .gitignore  Makefile  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.in  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: Makefile  Makefile.in
doc/reference-manual/: Makefile  Makefile.in
doc/reference-manual/config-examples/: Makefile  Makefile.in
doc/reference-manual/en/: Makefile  Makefile.in  apidoc-xm_resolve2.adoc  nxlog-reference-manual.html
doc/reference-manual/hu/: Makefile  Makefile.in
packaging/debian/: files  nxlog-ce.substvars  rules
packaging/debian/nxlog-ce-dbg/DEBIAN/: control  md5sums
packaging/debian/nxlog-ce/DEBIAN/: conffiles  control  md5sums  postinst  postrm  preinst  prerm
src/: Makefile  Makefile.in
src/common/: Makefile  Makefile.in  config.h  config.h.in  libnx.la  libnxssl.la  ssl.c
src/core/: Makefile  Makefile.in  libnxcore.la  libnxlog.la  nxlog
src/modules/: Makefile  Makefile.in
src/modules/extension/: Makefile  Makefile.am  Makefile.in
src/modules/extension/charconv/: Makefile  Makefile.in  xm_charconv.la
src/modules/extension/csv/: Makefile  Makefile.in  libcsv.la  xm_csv.la
src/modules/extension/exec/: Makefile  Makefile.in  xm_exec.la
src/modules/extension/fileop/: Makefile  Makefile.in  xm_fileop.la
src/modules/extension/gelf/: Makefile  Makefile.in  gelf.lo  xm_gelf.la  xm_gelf.lo
src/modules/extension/json/: Makefile  Makefile.in  libjson.la  xm_json.la
src/modules/extension/kvp/: Makefile  Makefile.in  libkvp.la  xm_kvp.la
src/modules/extension/multiline/: .xm_multiline.c.swp  Makefile  Makefile.in  xm_multiline.la
src/modules/extension/perl/: Makefile  Makefile.in  xm_perl.la  xm_perl_la-expr-xm_perl-funcproc.lo  xm_perl_la-libnxperl.lo  xm_perl_la-xm_perl.lo  xm_perl_la-xm_perl_funcproc_cb.lo  xm_perl_la-xsinit.lo
src/modules/extension/resolve2/: Makefile  Makefile.am  Makefile.in  expr-xm_resolve2-funcproc.c  expr-xm_resolve2-funcproc.h  expr-xm_resolve2-funcproc.lo  resolve2.c  resolve2.h  xm_resolve2-api.xml  xm_resolve2.c  xm_resolve2.h  xm_resolve2.la  xm_resolve2.lo  xm_resolve2_funcproc_cb.c  xm_resolve2_funcproc_cb.lo
src/modules/extension/resolve2/.deps/: expr-xm_resolve2-funcproc.Plo  xm_resolve2.Plo  xm_resolve2_funcproc_cb.Plo
src/modules/extension/resolve2/.libs/: xm_resolve2.la  xm_resolve2.lai
src/modules/extension/syslog/: .syslog.c.swp  Makefile  Makefile.in  libsyslog.la  xm_syslog.la
src/modules/extension/wtmp/: Makefile  Makefile.in  xm_wtmp.la
src/modules/extension/xml/: Makefile  Makefile.in  (+2 more)
src/modules/input/: Makefile  Makefile.in
src/modules/output/: Makefile  Makefile.in
src/modules/processor/: Makefile  Makefile.in
src/utils/: Makefile  Makefile.in  nxlog-processor  nxlog-stmnt-verifier  stresstest
test/: Makefile  Makefile.in
test/common/: Makefile  Makefile.in  alloc-test  configcache  date  expression-test  logdata  logdata-serialize  scheduler-test  stmnt-test  str-test  value-serialize  value-test
test/coresrc/: Makefile  Makefile.in  event  exception_test
(+147 files in other folders)
